--- a/style.css
+++ b/style.css
@@ -207,13 +207,14 @@ body {
 
   #page-quiz-container {
     background-image:url(Ressources/Images/pine-forest.jpg);
+    z-index: 1;
     width: 100%;
     height: 100vh;
     max-height: 100vh;
     background-position: center;
     background-size: cover;
     opacity: 0;
-    transition: opacity 1.2s ease-in-out;
+    transition: opacity 1s ease-in-out;
     overflow-y: hidden;
     overflow: hidden;
     display: flex;
@@ -226,7 +227,7 @@ body {
   }
 
   .brume {
-    z-index: 10;
+    z-index: 2;
     position: absolute;
     opacity: 0.75;
     width: 100%;
@@ -246,6 +247,7 @@ body {
   }
 
   .bloc-questionreponse {
+    z-index: 3;
     background: rgba( 255, 255, 245, 0.26);
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
@@ -287,8 +289,8 @@ body {
   }
 
   .bouton-reponse {
-    width: 250px; /* fixe */
-    height: 60px; /* fixe */
+    width: 260px; /* fixe */
+    height: 70px; /* fixe */
     font-size: 18px; /* fixe mais assez grand */
     font-family: 'Cinzel', serif;
     border-radius: 12px;
@@ -297,10 +299,21 @@ body {
     color: #2e3440;
     border: 1px solid rgba(255,255,255,0.3);
     margin: 10px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     transition: all 0.3s, transform 0.3s;
 }
+
+  .icone-rep {
+    margin-right: 4px;
+    align-self: flex-start;
+  }
+
+  .text-rep {
+    text-align: center;
+  }
 
 .bouton-reponse:hover {
     background: rgba(255, 255, 255, 0.3);
