--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: url(Ressources/Images/mushrooms-forest.jpg);
+    background-image: url(Ressources/Images/mushrooms-forest.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -206,13 +206,14 @@ body {
   }
 
   #page-quiz-container {
-    background-image:url(Ressources/Images/pine-forest.jpg);
+    background-image:url(Ressources/Images/pine-forest.webp);
     z-index: 1;
     width: 100%;
     height: 100vh;
     max-height: 100vh;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     overflow-y: hidden;
@@ -233,7 +234,7 @@ body {
     width: 100%;
     height: 100%;
     max-height: 100vh;
-    background-image: url(Ressources/Images/smoke.png);
+    background-image: url(Ressources/Images/smoke.webp);
     background-position: center;
     background-size: cover;
     animation: bougerBrume 10s infinite linear;
@@ -270,6 +271,7 @@ body {
     color: #2e3440;
     font-size: 38px;
     margin-bottom: 10px;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
   }
 
   .bloc-questionreponse p{
@@ -278,6 +280,7 @@ body {
     font-size: 1.5rem;
     margin-bottom: 10px;
     text-align: center;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
   }
 
   .bloc-reponses {
